--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.3.0",
+    "vue-virtual-scroller": "^2.0.0-beta.8",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
