--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@types/vue": "^2.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "date-fns": "^3.6.0",
+    "element-plus": "^2.7.0",
     "node-sass": "^9.0.0",
+    "nouislider": "^15.7.1",
     "sass-loader": "^14.1.1",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.3.0",
     "vue-virtual-scroller": "^2.0.0-beta.8",
+    "vue3-transitions": "^1.0.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
