--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-draggable-next": "^2.2.1",
+    "vue-flatpickr-component": "^11.0.5",
     "vue-router": "^4.3.0",
     "vue-virtual-scroller": "^2.0.0-beta.8",
     "vue3-transitions": "^1.0.0",
@@ -37,8 +38,11 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
